Fixed holiday bundle image and added gap recomendations title

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -2666,7 +2666,7 @@ body {
 }
 @media (max-width: 767px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
     top: 16px;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -2674,33 +2674,33 @@ body {
 }
 @media (min-width: 768px) and (max-width: 1023px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
     font-size: 10px;
     top: 16px;
   }
 }
 @media (min-width: 1024px) and (max-width: 1199px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
     top: 0px;
   }
 }
 @media (min-width: 1680px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
     top: -30px;
   }
 }
 @media (min-width: 1920px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text .overlay-text__inner .overlay-text__button {
     top: -50px;
     left: 7%;
   }
 }
 @media (max-width: 767px) {
   #section-id-template--15860249591966__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text__button-row,
-  #section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text__button-row {
+#section-id-template--16009236119710__829c3c02-065e-4087-a6c0-f8a0cb3d5f6e .overlay-text__button-row {
     margin: 0;
   }
 }
@@ -3069,19 +3069,22 @@ body {
 .section-product-recommendations .product-recommendations .hometitle strong {
   font-weight: 900;
 }
-.section-product-recommendations .product-recommendations .homesubtitle {
+.section-product-recommendations .product-recommendations h5.homesubtitle {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.4;
 }
 @media (min-width: 1200px) {
-  .section-product-recommendations .product-recommendations .homesubtitle {
+  .section-product-recommendations .product-recommendations h5.homesubtitle {
     width: 60%;
     margin: 0 auto;
   }
 }
-.section-product-recommendations .product-recommendations .homesubtitle p {
+.section-product-recommendations .product-recommendations h5.homesubtitle p {
   margin-bottom: 4rem;
+}
+.section-product-recommendations .product-recommendations div.homesubtitle {
+  height: 3rem;
 }
 .section-product-recommendations .collection-listing .product-list {
   margin-left: -18px;
@@ -3452,6 +3455,11 @@ body {
   }
 }
 
+@media (min-width: 1200px) {
+  #shopify-section-template--16013749911710__main #FeaturedMedia-template--16038250250398__main-27425367228574-wrapper .product-media .rimage-outer-wrapper .rimage-wrapper, #shopify-section-template--16013749911710__main #FeaturedMedia-template--16013749911710__main-27425367228574-wrapper .product-media .rimage-outer-wrapper .rimage-wrapper, #shopify-section-template--16038250250398__main #FeaturedMedia-template--16038250250398__main-27425367228574-wrapper .product-media .rimage-outer-wrapper .rimage-wrapper, #shopify-section-template--16038250250398__main #FeaturedMedia-template--16013749911710__main-27425367228574-wrapper .product-media .rimage-outer-wrapper .rimage-wrapper {
+    padding-top: 100% !important;
+  }
+}
 .chill-story-section .chill-story-section-wrapper {
   display: flex;
   padding: 3rem 0;
